Улучшения админки и исправления AI анализа
 Админка AI провайдеров:
- Убрана 'загрузка данных' при обновлении
- Добавлены таблицы статистики пользователей по языкам
- Добавлена таблица загруженной пищи
- Исправлена формула расчета процента успеха (было 500%)

 Исправления AI анализа:
- Уменьшены таймауты до разумных значений (20с вместо 90с)
- Убран конфликтующий Promise.race из Gemini
- Отключен прогрев AI (вызывал проблемы)
- Добавлена валидация изображений в Gemini
- Исправлен SQL запрос статистики AI

 Улучшения производительности:
- Согласованные таймауты между клиентом и сервером
- Стабильная работа первого запроса к AI
- Быстрые обновления данных в админке

--- a/backend/public/admin-ai.html
+++ b/backend/public/admin-ai.html
@@ -273,6 +273,18 @@
                 <div id="statsInfo" class="loading">Загрузка...</div>
             </div>
 
+            <!-- Пользователи по языкам -->
+            <div class="card">
+                <h3>👥 Пользователи по языкам</h3>
+                <div id="usersInfo" class="loading">Загрузка...</div>
+            </div>
+
+            <!-- Загруженная пища -->
+            <div class="card">
+                <h3>🍽️ Загруженная пища</h3>
+                <div id="mealsInfo" class="loading">Загрузка...</div>
+            </div>
+
             <!-- Быстрые действия -->
             <div class="card">
                 <h3>⚡ Быстрые действия</h3>
