Добавлена страница Политика конфиденциальности с поддержкой 5 языков
- Создана страница privacy.html с современным дизайном в стиле SnapCal
- Добавлен полный контент политики конфиденциальности на 16 разделов
- Реализована поддержка 5 языков (ru, en, uk, pl, es)
- Добавлена ссылка на политику в футер главной страницы
- Унифицирована система переводов с Terms страницей
- Добавлено специфическое содержание для ИИ-анализа питания

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -202,6 +202,9 @@
                     <a href="/terms" style="color: rgba(255,255,255,0.8); text-decoration: none;">
                         <span data-translate="footer.terms">📋 Условия использования</span>
                     </a> • 
+                    <a href="/privacy.html" style="color: rgba(255,255,255,0.8); text-decoration: none;">
+                        <span data-translate="footer.privacy">🔒 Политика конфиденциальности</span>
+                    </a> • 
                     🤖 Powered by AI • 🍽️ Nutrition Analysis • 📱 Mobile First
                 </p>
             </div>
