Ребрендинг SnapCal  SlimIQ: тексты, email, условия, политика, поддержка мультиязычности

--- a/backend/public/admin-ai.html
+++ b/backend/public/admin-ai.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob:; script-src 'self' 'unsafe-inline' 'unsafe-eval';">
-    <title>SnapCal - Админ панель AI</title>
+    <title>SlimIQ - Админ панель AI</title>
     <style>
         * {
             margin: 0;
@@ -247,7 +247,7 @@
 
     <div class="container">
         <div class="header">
-            <h1>🤖 SnapCal AI</h1>
+                            <h1>🤖 SlimIQ AI</h1>
             <p>Панель управления провайдерами искусственного интеллекта</p>
         </div>
 
