--- a/backend/public/demo.html
+++ b/backend/public/demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnapCal Demo - Попробуйте AI анализ</title>
+    <title>SlimIQ Demo - Попробуйте AI анализ</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="demo-translations.js"></script>
@@ -170,7 +170,7 @@
 
     <div class="demo-header">
         <div class="container">
-            <h1 data-translate="demo.title">🧪 SnapCal Demo</h1>
+                            <h1 data-translate="demo.title">🧪 SlimIQ Demo</h1>
             <p data-translate="demo.description">Попробуйте AI анализ калорийности прямо сейчас</p>
         </div>
     </div>
