--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnapCal: AI Лічильник Калорій</title>
-    <meta name="description" content="Легко відстежуйте калорії та макроелементи зі SnapCal — AI трекером харчування. Записуйте їжу миттєво за фото.">
-    <meta name="keywords" content="ai лічильник калорій, трекер харчування, запис їжі, підрахунок калорій по фото, трекер макроелементів, здорове харчування, додаток для схуднення, додаток для дієти, фітнес додаток, snapcal, безкоштовний лічильник калорій">
+    <title>SlimIQ: AI Лічильник Калорій</title>
+    <meta name="description" content="Легко відстежуйте калорії та макроелементи зі SlimIQ — AI трекером харчування. Записуйте їжу миттєво за фото.">
+    <meta name="keywords" content="ai лічильник калорій, трекер харчування, запис їжі, підрахунок калорій по фото, трекер макроелементів, здорове харчування, додаток для схуднення, додаток для дієти, фітнес додаток, slimiq, безкоштовний лічильник калорій">
     <meta name="robots" content="index, follow">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
@@ -22,7 +22,7 @@
 <body>
     <nav class="navbar">
         <div class="container navbar-content">
-            <a href="#" class="logo"><img src="iPhone Retina icon.png" alt="SnapCal Logo">SnapCal</a>
+            <a href="#" class="logo"><img src="iPhone Retina icon.png" alt="SlimIQ Logo">SlimIQ</a>
             <div class="nav-links" id="nav-links">
                 <a href="#ai-analyze" data-i18n="navbar.ai">AI Аналіз</a>
                 <a href="#features" data-i18n="navbar.features">Можливості</a>
@@ -39,7 +39,7 @@
     <section class="hero slide-in" id="hero">
         <div class="hero-bg-parallax" id="parallax-bg"></div>
         <div class="container hero-content">
-            <div class="hero-title" data-i18n="hero.title">AI-лічильник калорій нового покоління<br>SnapCal</div>
+            <div class="hero-title" data-i18n="hero.title">AI-лічильник калорій нового покоління<br>SlimIQ</div>
             <div class="hero-photo-placeholder"><img src="1.jpg" alt="Скриншот приложения 1" class="hero-screenshot"></div>
             <div class="hero-sub" data-i18n="hero.subtitle">Фотографуй їжу — отримуй аналіз за секунди. Жодного ручного вводу!</div>
             <div class="hero-badges">
@@ -90,7 +90,7 @@
     </section>
     <section class="section slide-in" id="screens">
         <div class="container">
-            <div class="section-title" data-i18n="screens.title">Подивіться на <span class="highlight-text">SnapCal в дії</span></div>
+            <div class="section-title" data-i18n="screens.title">Подивіться на <span class="highlight-text">SlimIQ в дії</span></div>
             <div class="section-sub" data-i18n="screens.subtitle">Красивий та інтуїтивний інтерфейс, який робить відстеження харчування приємним</div>
             <div class="app-screenshots">
                 <div class="screenshot-placeholder"><img src="3.png" alt="Скриншот 2" class="app-screenshot"></div>
@@ -101,7 +101,7 @@
     </section>
     <section class="section slide-in" id="features">
         <div class="container">
-            <div class="section-title" data-i18n="features.title">Можливості SnapCal</div>
+            <div class="section-title" data-i18n="features.title">Можливості SlimIQ</div>
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">📸</div>
@@ -144,7 +144,7 @@
                             <div class="review-stars">★★★★★</div>
                         </div>
                     </div>
-                    <blockquote class="review-text" data-i18n="review.2.text">"Я спробував їх усі. SnapCal — <strong class="highlight-text">найпростіший та найінтуїтивніший</strong> трекер з усіх. AI економить мені СТІЛЬКИ часу. Дуже рекомендую!"</blockquote>
+                    <blockquote class="review-text" data-i18n="review.2.text">"Я спробував їх усі. SlimIQ — <strong class="highlight-text">найпростіший та найінтуїтивніший</strong> трекер з усіх. AI економить мені СТІЛЬКИ часу. Дуже рекомендую!"</blockquote>
                     <div class="review-footer">Перевірений користувач</div>
                 </div>
                 <div class="review-card">
@@ -155,7 +155,7 @@
                             <div class="review-stars">★★★★★</div>
                         </div>
                     </div>
-                    <blockquote class="review-text" data-i18n="review.3.text">"Відстеження макроелементів раніше було заплутаним. SnapCal робить це простим і зручним. Бачити свій прогрес мотивує мене. <strong class="highlight-text">Це дійсно працює!</strong>"</blockquote>
+                    <blockquote class="review-text" data-i18n="review.3.text">"Відстеження макроелементів раніше було заплутаним. SlimIQ робить це простим і зручним. Бачити свій прогрес мотивує мене. <strong class="highlight-text">Це дійсно працює!</strong>"</blockquote>
                     <div class="review-footer">Перевірений користувач</div>
                 </div>
             </div>
@@ -166,7 +166,7 @@
             <div class="cta-title" data-i18n="cta.title">Готові відчути <span class="highlight-text-white">майбутнє</span> відстеження харчування?</div>
             <div class="cta-text" data-i18n="cta.text">Досить зважувати, почніть фотографувати. Завантажте AI-лічильник калорій сьогодні та змініть свій шлях до здоров'я.</div>
             <div class="hero-cta">
-                <button class="btn-download" disabled data-i18n="cta.button">Завантажити SnapCal БЕЗКОШТОВНО!</button>
+                <button class="btn-download" disabled data-i18n="cta.button">Завантажити SlimIQ БЕЗКОШТОВНО!</button>
             </div>
         </div>
     </section>
@@ -174,9 +174,9 @@
         <div class="footer-links">
             <a href="/privacy.html" data-i18n="footer.privacy">Політика конфіденційності</a>
             <a href="/terms.html" data-i18n="footer.terms">Умови користування</a>
-            <a href="mailto:support@snapcal.fun" data-i18n="footer.support">Підтримка</a>
+            <a href="mailto:support@slimiq.fun" data-i18n="footer.support">Підтримка</a>
         </div>
-        <div data-i18n="footer.copyright">© <span id="current-year"></span> SnapCal. Всі права захищено.</div>
+        <div data-i18n="footer.copyright">© <span id="current-year"></span> SlimIQ. Всі права захищено.</div>
     </footer>
     <div id="imageModal" class="modal">
         <span class="close">&times;</span>
