--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -28,7 +28,7 @@
                 <a href="#features" data-i18n="navbar.features">Можливості</a>
                 <a href="#contacts" data-i18n="navbar.contacts">Контакти</a>
             </div>
-            <button class="btn-download" disabled data-i18n="navbar.download">Завантажити</button>
+            <button class="btn-download accent-bright" disabled data-i18n="navbar.download">Завантажити</button>
             <div class="hamburger" id="hamburger">
                 <span></span>
                 <span></span>
@@ -40,7 +40,7 @@
         <div class="hero-bg-parallax" id="parallax-bg"></div>
         <div class="container hero-content">
             <div class="hero-title" data-i18n="hero.title">AI-лічильник калорій нового покоління<br>SlimIQ</div>
-            <div class="hero-photo-placeholder"><img src="1.jpg" alt="Скриншот приложения 1" class="hero-screenshot"></div>
+            <div class="hero-photo-placeholder"><img src="1.jpg" alt="Скриншот приложения 1" class="hero-screenshot" data-image-key="hero-screenshot"></div>
             <div class="hero-sub" data-i18n="hero.subtitle">Фотографуй їжу — отримуй аналіз за секунди. Жодного ручного вводу!</div>
             <div class="hero-badges">
                 <div class="store-btn"><img src="ua_badge_web_generic.png" alt="Google Play"></div>
@@ -82,7 +82,7 @@
                 <div class="ai-analyze-title" data-i18n="ai.title">AI аналіз фото</div>
                 <div class="section-sub" data-i18n="ai.desc">Завантажте фото страви — і отримайте повний аналіз калорій та нутрієнтів за секунди. Жодних таблиць і ручного підрахунку!</div>
                 <div class="ai-analyze-video" id="ai-analyze-video">
-                    <img src="2.jpg" alt="AI анализ фото" class="ai-analyze-screenshot">
+                    <img src="2.jpg" alt="AI анализ фото" class="ai-analyze-screenshot" data-image-key="ai-analyze-screenshot">
                 </div>
                 <div class="ai-analyze-footer" data-i18n="ai.works">Це реально працює!</div>
             </div>
@@ -93,9 +93,9 @@
             <div class="section-title" data-i18n="screens.title">Подивіться на <span class="highlight-text">SlimIQ в дії</span></div>
             <div class="section-sub" data-i18n="screens.subtitle">Красивий та інтуїтивний інтерфейс, який робить відстеження харчування приємним</div>
             <div class="app-screenshots">
-                <div class="screenshot-placeholder"><img src="3.png" alt="Скриншот 2" class="app-screenshot"></div>
-                <div class="screenshot-placeholder"><img src="4.jpg" alt="Скриншот 3" class="app-screenshot"></div>
-                <div class="screenshot-placeholder"><img src="5.jpg" alt="Скриншот 4" class="app-screenshot"></div>
+                <div class="screenshot-placeholder"><img src="3.png" alt="Скриншот 2" class="app-screenshot" data-image-key="screenshot-1"></div>
+                <div class="screenshot-placeholder"><img src="4.jpg" alt="Скриншот 3" class="app-screenshot" data-image-key="screenshot-2"></div>
+                <div class="screenshot-placeholder"><img src="5.jpg" alt="Скриншот 4" class="app-screenshot" data-image-key="screenshot-3"></div>
             </div>
         </div>
     </section>
@@ -166,7 +166,7 @@
             <div class="cta-title" data-i18n="cta.title">Готові відчути <span class="highlight-text-white">майбутнє</span> відстеження харчування?</div>
             <div class="cta-text" data-i18n="cta.text">Досить зважувати, почніть фотографувати. Завантажте AI-лічильник калорій сьогодні та змініть свій шлях до здоров'я.</div>
             <div class="hero-cta">
-                <button class="btn-download" disabled data-i18n="cta.button">Завантажити SlimIQ БЕЗКОШТОВНО!</button>
+                <button class="btn-download cta-dark" disabled data-i18n="cta.button">Завантажити SlimIQ БЕЗКОШТОВНО!</button>
             </div>
         </div>
     </section>
@@ -182,6 +182,7 @@
         <span class="close">&times;</span>
         <img class="modal-content" id="modalImage">
     </div>
+    <script src="images-config.js"></script>
     <script src="i18n-landing.js"></script>
     <script src="scripts-landing.js"></script>
 </body>
